[package]
name = "vanion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
curve25519-dalek = "4.1.1"
data-encoding = "2.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
